--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ httplib2==0.22.0
 httpx==0.27.2
 hyperframe==6.0.1
 kiwisolver==1.4.8
-matplotlib==3.10.3
+matplotlib==3.8.4
 mkl-service==2.4.0
 multidict==6.1.0
 oauth2client==4.1.3
@@ -42,6 +42,7 @@ rsa==4.9.1
 setuptools==75.1.0
 sniffio==1.3.1
 storage3==0.8.2
+streamlit==1.35.0
 streamlit_folium==0.24.1
 supabase==2.9.1
 supafunc==0.6.2
