--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,5 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiosignal==1.3.1
-annotated-types==0.7.0
-contourpy==1.3.3
-cycler==0.12.1
-deprecation==2.1.0
-et_xmlfile==2.0.0
-folium==0.19.5
-fonttools==4.59.0
-frozenlist==1.5.0
-google-auth==2.40.3
-google-auth-oauthlib==1.2.2
-gotrue==2.9.3
 gspread==6.2.1
-gspread-dataframe==4.0.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
-hyperframe==6.0.1
-kiwisolver==1.4.8
-matplotlib==3.8.4
-mkl-service==2.4.0
-multidict==6.1.0
 oauth2client==4.1.3
-oauthlib==3.3.1
-openpyxl==3.1.5
-postgrest==0.17.2
-propcache==0.2.0
-protobuf==4.25.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyparsing==3.2.3
-realtime==2.0.6
-requests-oauthlib==2.0.0
-rsa==4.9.1
-setuptools==75.1.0
-sniffio==1.3.1
-storage3==0.8.2
-streamlit==1.35.0
-streamlit_folium==0.24.1
-supabase==2.9.1
-supafunc==0.6.2
-typing_extensions==4.12.2
-websockets==13.1
-wheel==0.44.0
-xyzservices==2025.1.0
-yarl==1.16.0
+pandas==2.2.2
+streamlit==1.38.0
+plotly==5.24.1
